--- a/index.html
+++ b/index.html
@@ -8,29 +8,80 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class "header">
+    <div class="header">
         <div class="sub-menu left">
             <div class="header-icons">
                 <img src="img\eMsg.png" alt="">
             </div>
-            <div>
+            <div class="header-text">
                 <p>fixustechnology@gmail.com</p>
             </div>
             <div class="header-icons">
                 <img src="img\call.png" alt="">
             </div>
+            <div class="header-text">
+                <p>(+234)8063835086</p>
+            </div>
 
         </div>
         <div class="sub-menu right">
-            
+            <div class="right">
+                <p>English</p>
+                <img src="img\dropdwn.png">            
+            </div>
+            <div class="right">
+                <p>USD</p>
+                <img src="img\dropdwn.png">
+            </div>
+            <div class="right">
+                <p>Login</p>
+                <img src="img\user 1 (Traced).png" 
+                width="10" height="12">
+            </div>
+            <div class="right">
+                <p>Wishlist</p>
+                <img src="img\Wishlist.png">
+            </div>
+            <div class="shopping-cart">
+                <img src="img\shopping-cart 1 (Traced).png" 
+                width="17.5px" height="12.5px">
+            </div>
         </div>
-
     </div>
     <div class="navbar">
-
+        <div class="main-menu left">
+            <div class="right2">
+                <h1>Hekto</h1>
+            </div>
+            <div class="right2">
+                <p style="color: red;">Home</p>
+                <img src="img\home.png">
+            </div>
+            <div class="right2">
+                <p>Pages</p>
+            </div>
+            <div class="right2">
+                <p>Products</p>
+            </div>
+            <div class="right2">
+                <p>Blog</p>
+            </div>
+            <div class="right2">
+                <p>Shop</p>
+            </div>
+            <div class="right2">
+                <p>Contact</p>
+            </div>
+        </div>
+        <div class="search-icon right">
+            <input type="text"></input>
+            <div id="rectangle" style="width: 51px; height: 40px; 
+            background-color:#FB2E86;">
+            <img src="img\search.png" style="padding: 23.5%;"></div>
+        </div>
     </div>
     <div class="banner">
-
+        
     </div>
 </body>
 </html>
