--- a/index.html
+++ b/index.html
@@ -425,5 +425,88 @@
             </div>
         </div>       
     </section>
+    <section class="shopex">
+        <div class="section-header">
+            <h1>What Shopex Offer!</h1>
+        </div>
+        <div class="shopex-offers">
+            <div class="delv-van">
+                <div class="van-img">
+                    <img src="img\del-van.png" alt="support">
+                </div>
+                <div class="text4">
+                    <p>24/7 Support</p>
+                </div>
+                <div class="text5">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, expedita tempore.</p>
+                </div>
+            </div>
+            <div class="cash-back">
+                <div class="cashback-img">
+                    <img src="img\cashback.png" alt="support">
+                </div>
+                <div class="text4">
+                    <p>24/7 Support</p>
+                </div>
+                <div class="text5">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, expedita tempore.</p>
+                </div>
+            </div>
+            <div class="prem-quality">
+                <div class="prem-img">
+                    <img src="img\premium-quality.png" alt="support">
+                </div>
+                <div class="text4">
+                    <p>24/7 Support</p>
+                </div>
+                <div class="text5">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, expedita tempore.</p>
+                </div>
+            </div>
+            <div class="24hrs-support">
+                <div class="24hrs-img">
+                    <img src="img\24-hrs-support.png" alt="support">
+                </div>
+                <div class="text4">
+                    <p>24/7 Support</p>
+                </div>
+                <div class="text5">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, expedita tempore.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="unique-feature">
+        <div class="unique-sofa"></div>
+        <div class="unique-letters">
+            <div class="unique-words">                
+                <div class="text6">
+                    <h1>Unique Features Of Latest & Trending Products</h1>
+                </div>
+                <div class="text7">
+                    <p>All frames constructed with hardwood solids and laminates</p>
+                </div>
+                <div class="text7">
+                    <p>Reinforced with double wood dowels, glue, screw - nails corner blocks and machine nails</p>
+                </div>            
+                <div class="text7">
+                    <p>Arms, backs and seats are structurally reinforced</p>
+                </div>
+            </div>  
+            <div class="details2">
+                <button class="banner-btn">
+                    <p>Add To Cart</p>
+                </button>
+                <div class="unique-text">
+                    <div class="text8">
+                        <p>B&B Italian Sofa</p>
+                    </div>
+                    <div class="text9">
+                        <p>$32.00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
